--- a/modul 1 no 1.html
+++ b/modul 1 no 1.html
@@ -13,7 +13,7 @@
 <p>Profil Perpustakaan UMA:</p>
 <p><b>1. Perpustakaan UMA</b></p>
 <a href="https://perpustakaan.uma.ac.id/">
-&emsp;<img src="C:\Users\sekar\Downloads\koleksi-buku-perpustakaan-uma.jpg"style="width:900px;height: 506px;px;"> </a>
+&emsp;<img src="perpusuma.jpg"widht="500px;height=250px;px;"> </a>
 
 <p class="justify">&emsp;Perpustakaan Universitas Medan Area memilik 2 Pusat Perpustakaan dan 8 Perpustakaan cabang. Perpustakaan pusat 1 berlokasi di sebelah barat mesjid taqwa UMA. Perpustakaan Pusat yang kedua berlokasi di Jl. Setia Budi No.79B, Tj. Rejo, Medan, begitupun Perpustakaan Pascasarjana berada di alamat 
     yang dimaksud, lokasinya dipusat gedung perkuliahan mahasiswa program master dan doktor. Sementara perpustakaan cabang berada disetiap fakultas, diantaranya : Teknik, Pertanian, Ekonomi dan Bisnis, Hukum, Ilmu Sosial dan Ilmu Politik, Psikologi dan Biologi. Selain itu, Perpustakaan Pusat Islam yang berada didalam mesjid UMA. Secara keseluruhan koleksi Universitas Medan Area sebanyak 17.490 judul, dan 36.944 eksemplar terdiri dari buku teks, e-book, jurnal, undang-undang, fiksi, kamus, koleksi kuno, al-quran, bulletin, buku panduan, atlas, buku ajar, almanac, referensi electronic resource, e-magazine, e-prociding dan cd-rom.</p>
@@ -22,7 +22,7 @@
 <p>Profil Perpustakaan UMSU:</p>
 <p><b>2. Perpustakaan UMSU</b></p>
 <a href="https://perpustakaan.umsu.ac.id/">
-&emsp;<img src="C:\Users\sekar\Downloads\WhatsApp Image 2024-03-14 at 10.26.07.jpeg"style="width:900px;height: 506px;px;"> </a>
+&emsp;<img src="perpusumsu.jpeg"style="widht=500px;height=250px;px;"></a>
 
 <p class="justify">&emsp;Atas bantuan dari H. Probo Sutedjo selaku dewan kurator UMSU Medan, berdirilah kampus III yang terletak di Jalan Kapten Muchtar Basri, BA No. 3 (Kampus Mercubuana) dengan luas bangunan ± 2 hektar. Pada tahun 1992 kampus III UMSU diresmikan pemakaiannya oleh Menteri Penerangan Harmoko yang sekaligus meresmikan tiga unit gedung yaitu gedung Rektorat, gedung Fakultas Ekonomi dan gedung Fakultas Hukum yang tergabung dengan Fakultas Isipol serta Rektorat UMSU Medan yang semula berada pada kampus I pindah ke kampus III.
     Perpustakaan UMSU mulanya telah berdiri di lingkungan kampus I sejak tahun 1957 tepatnya pada tanggal 17 Februari bersamaan dengan berdirinya Fakultas Filsafat. Sebagaimana yang telah diuraikan di atas, oleh karena meningkatnya jumlah manusia yang mendaftar ke UMSU Medan dimulai pada tahun 1982, pusat penyelenggaraan akademik UMSU Medan yang sebelumnya berada pada kampus I pindah ke kampus III termasuk gedung Rektorat UMSU Medan.</p>
